added prettier, format files according to prettier config

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/src/assets/calendar.png" />
+        <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>React calendar</title>
+        <title>Kanban board</title>
     </head>
     <body>
         <div id="root"></div>
